<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.minerva.sharebooks.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_books_share"
        android:name="com.minerva.sharebooks.ui.share_books.ShareBooksFragment"
        android:label="@string/title_books_sharing"
        tools:layout="@layout/fragment_share_books" />

    <fragment
        android:id="@+id/navigation_user"
        android:name="com.minerva.sharebooks.ui.user.UserFragment"
        android:label="@string/title_user"
        tools:layout="@layout/fragment_user" />
</navigation>